fixed spacing on pictures

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -19,6 +19,14 @@
     bottom:0;
    
 }
+
+#description {
+    height: 48px;
+}
+
+img {
+    height: 350px;
+}
 /* 
 
     You can write your own styles here...
